Fix landing page overflow

--- a/src/js/components/Landing/Landing.sass
+++ b/src/js/components/Landing/Landing.sass
@@ -77,7 +77,7 @@
     align-items: center
     justify-content: center
 
-    margin: 80px auto 5px
+    margin: 120px auto 5px
 
     color: white
     font-size: 38px
@@ -96,7 +96,7 @@
 
   .ctaContainer
     display: flex
-    margin: 0px auto 50px auto
+    margin: 0px auto 120px auto
 
     .uploadButton
       height: 50px
